--- a/index.html
+++ b/index.html
@@ -36,6 +36,57 @@
                 color: #151515;
             }
 
+            .spinner {
+              width: 40px;
+              height: 40px;
+              position: relative;
+              margin: 0 auto;
+            }
+
+            .bounce1, .bounce2, .bounce3 {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: #00ff00; /* Change the color to green */
+            opacity: 0.6;
+            position: absolute;
+            top: 0;
+            left: 0;
+            }
+
+
+            .bounce1 {
+              animation: bounce 2s infinite ease-in-out;
+            }
+
+            .bounce2 {
+              animation: bounce 2s infinite ease-in-out 0.33s;
+            }
+
+            .bounce3 {
+              animation: bounce 2s infinite ease-in-out 0.66s;
+            }
+
+            @keyframes bounce {
+                0%, 100% {
+                    transform: scale(0);
+                }
+                50% {
+                    transform: scale(1);
+                }
+            }
+
+            .animated-text {
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 1vh;
+            }
+
+            .spinner {
+            display: inline-block;
+            vertical-align: middle;
+            }
+
         </style>
     </head>
 
@@ -44,7 +95,12 @@
             <div class="header">
                 <img class="header-image" src="https://nodusroleplay.net/uploads/monthly_2023_01/test2.png.6141cb77c8503294eee1aadf8ee42b4a.png">
                 <hr>
-                <h1>Connecting...</h1>
+                <h1 class="animated-text">Connecting</h1>
+                <div class="spinner">
+                  <div class="bounce1"></div>
+                  <div class="bounce2"></div>
+                  <div class="bounce3"></div>
+                </div>
                 <h3>You may close this window once connecting.</h3>
                 <h3>If you are not redirected automatically, follow this <a href='fivem://connect/141.11.231.162:30120-pure_1'>link</a></h3>
                 <h3 class="streamers">Please allow popups for this domain if you can not connect.</h3>
