--- a/connect-public.html
+++ b/connect-public.html
@@ -93,7 +93,8 @@
     <body>
         <div class="main-content">
             <div class="header">
-                <img class="header-image" src="https://nodusroleplay.net/uploads/monthly_2023_01/test2.png.6141cb77c8503294eee1aadf8ee42b4a.png">
+                <!-- <img class="header-image" src="https://nodusroleplay.net/uploads/monthly_2023_01/test2.png.6141cb77c8503294eee1aadf8ee42b4a.png"> -->
+                <h1>CaliWorld Roleplay</h1>
                 <hr>
                 <h1 class="animated-text">Connecting</h1>
                 <div class="spinner">
@@ -102,11 +103,11 @@
                   <div class="bounce3"></div>
                 </div>
                 <h3>You may close this window once connecting.</h3>
-                <h3>If you are not redirected automatically, follow this <a href='fivem://connect/141.11.231.162:30120-pure_1'>link</a></h3>
+                <h3>If you are not redirected automatically, follow this <a href='fivem://connect/cw.cali.network'>link</a></h3>
                 <h3 class="streamers">Please allow popups for this domain if you can not connect.</h3>
             </div>
         </div>
-        <meta http-equiv="refresh" content="0; url=fivem://connect/141.11.231.162:30120-pure_1">
+        <meta http-equiv="refresh" content="0; url=fivem://connect/cw.cali.network">
     </body>
 
 </html>
