--- a/connect-public.html
+++ b/connect-public.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Nodus - Connect Page</title>
+        <title>CaliWorld - Connect Page</title>
         <style>
             body {
                 background-color: #101010;
@@ -93,7 +93,7 @@
     <body>
         <div class="main-content">
             <div class="header">
-                <!-- <img class="header-image" src="https://nodusroleplay.net/uploads/monthly_2023_01/test2.png.6141cb77c8503294eee1aadf8ee42b4a.png"> -->
+                <!-- <img class="header-image" src=""> -->
                 <h1>CaliWorld Roleplay</h1>
                 <hr>
                 <h1 class="animated-text">Connecting</h1>
