--- a/connect-public.html
+++ b/connect-public.html
@@ -107,7 +107,7 @@
                 <h3 class="streamers">Please allow popups for this domain if you cannot connect.</h3>
             </div>
         </div>
-        <meta http-equiv="refresh" content="0; url=fivem://connect/play.caliworld.gg/:30120?streamerMode=1&pure_1">
+        <meta http-equiv="refresh" content="0; url=fivem://connect/play.caliworld.gg?streamerMode=1&pure_1">
     </body>
 
 </html>
