--- a/connect-public.html
+++ b/connect-public.html
@@ -103,7 +103,7 @@
                   <div class="bounce3"></div>
                 </div>
                 <h3>You may close this window once connecting.</h3>
-                <h3>If you are not redirected automatically, follow this <a href='fivem://connect/play.caliworld.gg:30120?streamerMode=1&pure_1'>link</a></h3>
+                <h3>If you are not redirected automatically, follow this <a href='fivem://connect/play.caliworld.gg?streamerMode=1&pure_1'>link</a></h3>
                 <h3 class="streamers">Please allow popups for this domain if you cannot connect.</h3>
             </div>
         </div>
