--- a/connect-public.html
+++ b/connect-public.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>CaliWorld - Connect Page</title>
+        <title>Beyond Roleplay - Connect Page</title>
         <style>
             body {
                 background-color: #101010;
@@ -94,7 +94,7 @@
         <div class="main-content">
             <div class="header">
                 <!-- <img class="header-image" src=""> -->
-                <h1>CaliWorld Roleplay</h1>
+                <h1>Beyond Roleplay</h1>
                 <hr>
                 <h1 class="animated-text">Connecting</h1>
                 <div class="spinner">
@@ -103,11 +103,11 @@
                   <div class="bounce3"></div>
                 </div>
                 <h3>You may close this window once connecting.</h3>
-                <h3>If you are not redirected automatically, follow this <a href='fivem://connect/play.caliworld.gg?streamerMode=1&pure_1'>link</a></h3>
+                <h3>If you are not redirected automatically, follow this <a href='fivem://connect/play.beyondroleplay.life?streamerMode=1&pure_1'>link</a></h3>
                 <h3 class="streamers">Please allow popups for this domain if you cannot connect.</h3>
             </div>
         </div>
-        <meta http-equiv="refresh" content="0; url=fivem://connect/play.caliworld.gg?streamerMode=1&pure_1">
+        <meta http-equiv="refresh" content="0; url=fivem://connect/play.beyondroleplay.life?streamerMode=1&pure_1">
     </body>
 
 </html>
